--- a/Template.html
+++ b/Template.html
@@ -1,8 +1,14 @@
 <!Doctype html>
 <html>
 	<head>
-		contains info, not really page stuff
+		<!-- contains info, not really page stuff this is how u comment btw -->
 		<title>Name of Page</title>
+		<style>
+			body {
+				background-color: black;
+  				color: white;
+			}
+		</style>
 	</head>
 	<body>
 		pretty much where everything goes 
