--- a/Template.html
+++ b/Template.html
@@ -5,7 +5,7 @@
 		<title>Name of Page</title>
 		<style>
 			body {
-				background-color: black;
+				background-color: #191919;
   				color: white;
 			}
 		</style>
