--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!Doctype html>
+<html>
+	<head>
+		<title>Projects Hub</title>
+		<style>
+			body {
+				background-color: #191919;
+  				color: white;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>List of Projects</h1>
+		<ul>
+			<li><a href="Template.html">Template Project</a></li>
+			
+		</ul>
+	</body>
+</html>
