--- a/Template.html
+++ b/Template.html
@@ -3,12 +3,7 @@
 	<head>
 		<!-- contains info, not really page stuff this is how u comment btw -->
 		<title>Name of Page</title>
-		<style>
-			body {
-				background-color: #191919;
-  				color: white;
-			}
-		</style>
+		<link rel="stylesheet" href="css/mycolors.css">
 	</head>
 	<body>
 		pretty much where everything goes 
