--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html>
 	<head>
 		<title>Projects Hub</title>
-		<style>
-			body {
-				background-color: #191919;
-  				color: white;
-			}
-		</style>
+		<link rel="stylesheet" href="css/mycolors.css">
 	</head>
 	<body>
 		<h1>List of Projects</h1>
