--- a/Template.html
+++ b/Template.html
@@ -23,7 +23,10 @@
 			<li>list thing 2</li>
 			<li><a href="index.html">Link to things with a</a></li>
 		</ul>
-		<img src="Shrek_clipart4_completeish.png">
+		<img src="Shrek_clipart4_completeish.png" width=300px height=300px>
 		<!-- You can also add width/height things -->
+		<footer>
+			<a href="index.html">Home</a>
+		</footer>
 	</body>
 </html>
