--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>List of Projects</h1>
 		<ul>
 			<li><a href="Template.html">Template Project</a></li>
-			
+			<li><a href="angrytext.html">Angery Text Maker</a></li>
 		</ul>
 	</body>
 </html>
