change by VSCode

--- a/Template.html
+++ b/Template.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<!-- contains info, not really page stuff this is how u comment btw -->
+		<!-- This is a change -->
 		<title>Name of Page</title>
 		<link rel="stylesheet" href="css/mycolors.css">
 	</head>
